# dasp

./: .gitignore  ADAPTIVE_PERFORMANCE_STRATEGY.md  ADVANCED_CALIBRATION_TRANSFER_PLAN.md  AGENT1_CHANGES_SUMMARY.md  AGENT1_RESULTS_DATA_STORAGE_AUDIT.md  AGENT1_TAB9_SECTION_D_IMPLEMENTATION.md  AGENT2_CODE_SNIPPETS.md  AGENT2_PLOT_DESCRIPTIONS.md  AGENT2_QUICK_SUMMARY.md  AGENT2_TAB9_VISUALIZATION_REPORT.md  AGENT3_MODEL_LOADING_ENGINE_COMPLETE.md  AGENT3_TAB9_UX_DELIVERY_INDEX.md  AGENT4_DELIVERY_SUMMARY.md  AGENT4_EXECUTION_ENGINE_COMPLETE.md  AGENT4_EXECUTION_FLOW_DIAGRAM.md  AGENT4_QUICK_REFERENCE.md  AGENT4_TAB9_VALIDATION_COMPLETE.md  AGENT5_COMPLETE_SUMMARY.md  AGENT5_DIAGNOSTIC_PLOT_SUITE_ANALYSIS.md  AGENT5_QUICK_START.md  AGENT5_TAB7_PLOT_IMPLEMENTATION.py  AGENT5_TESTING_GUIDE.md  AGENTS.md  ARCHITECT_HANDOFF_TAB7_CRITICAL_FAILURE.md  BAYESIAN_OPTIMIZATION_IMPLEMENTATION_PLAN.md  BAYESIAN_OPTIMIZATION_STATUS.md  BUG_FIX_CATEGORICAL_TARGETS.md  BUG_FIX_REPORT.md  BUG_FIX_REPORT_COMPLETE.md  CALIBRATION_TRANSFER_FIXES.md  CALIBRATION_TRANSFER_QUICK_REFERENCE.md  CALIBRATION_TRANSFER_REDESIGN_HANDOFF.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLASSIFICATION_FIXES.md  CODEX_HANDOFF.md  COMMIT_MESSAGE.txt  COMPLEXITY_SCORE_QUICK_REFERENCE.md  COMPREHENSIVE_FORMAT_SUPPORT_COMPLETE.md  COMPREHENSIVE_MODEL_OPTIMIZATION.md  (+251 more)
.claude/: settings.local.json
agent_pack/: integration_lead_prompt.md
archive/: README.md
archive_docs/: DIAGNOSTIC_SESSION.md  IMPROVEMENTS_PHASE1.md  PHASE2_COMPLETE.md  PROJECT_STATUS.md
docs/: MACHINE_LEARNING_MODELS.md
documentation/: CODE_STRUCTURE_REFERENCE.md  DERIV_SNV_FIX_SUMMARY.md  DOCUMENTATION_INDEX.md  INSTALLER_CREATION_GUIDE.md  JULIA_PORTING_AND_INSTALLER_ANALYSIS.md  JULIA_PORTING_IMPLEMENTATION_PLAN.md  MODEL_DIAGNOSTICS_GUIDE.md  MODEL_PREDICTION_FIX.md  NEURAL_BOOSTED_GUIDE.md  PHASE2_USER_GUIDE.md  RECENT_UPDATES.md  SPECTRA_ANALYSIS_COMPREHENSIVE_REVIEW.md  SPECTRA_CAPABILITIES_EXECUTIVE_SUMMARY.md  WAVELENGTH_SUBSET_SELECTION.md
example/: BoneCollagen.csv  EXPECTED_OUTPUTS.md  README.md  RESULTS_SUMMARY.md  Spectrum00004.asd  Spectrum00005.asd  Spectrum00006.asd  Spectrum00007.asd  Spectrum00009.asd  (+48 more)
(+500 files in other folders)
