[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-predict"
version = "0.1.0"
description = "Rapid spectral modeling CLI (ASD/CSV) with preprocessing, CV, ranking, and reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Team", email="dev@example.com"}]
license = {text = "MIT"}
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "pyyaml",
  "joblib"
]

[project.optional-dependencies]
asd = ["specdal", "asdreader"]
dev = ["pytest", "black", "flake8", "build", "twine"]

[project.scripts]
spectral-predict = "spectral_predict.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
